# RiscvInterpreter

./: .gitignore  CMakeLists.txt  main.cpp
Libraries/RiscvLib/: CMakeLists.txt
Libraries/RiscvLib/CMakeModules/: CpuLibrarySources.cmake  DiagLibrarySources.cmake  HwLibrarySources.cmake  IntrptLibrarySources.cmake  MemLibrarySources.cmake  ResultLibrarySources.cmake  TestLibrarySources.cmake  UtilLibrarySources.cmake
Libraries/RiscvLib/Include/RiscvEmu/: diag.h  intrpt.h  mem.h  result.h  riscv_Peripheral.h  riscv_System.h  riscv_Types.h
Libraries/RiscvLib/Include/RiscvEmu/cfg/cpu/: cpu_Extensions.h  cpu_Vendor.h
Libraries/RiscvLib/Include/RiscvEmu/cpu/: cpu_AccessReason.h  cpu_AddrTransMode.h  cpu_CsrFormat.h  cpu_CsrId.h  cpu_Disassembler.h  cpu_EncodeInstruction.h  cpu_Hart.h  cpu_Instruction.h  cpu_InstructionFormat.h  cpu_Opcodes.h  cpu_PrivilageLevel.h  cpu_ProcessorCore.h  cpu_ProcessorRegisters.h  cpu_Result.h  cpu_TrapCode.h  cpu_Types.h  cpu_Values.h
Libraries/RiscvLib/Include/RiscvEmu/cpu/CSR/: cpu_misa.h  cpu_satp.h
Libraries/RiscvLib/Include/RiscvEmu/cpu/decoder/: cpu_DecoderImpl.h  cpu_InstructionFormat.h  cpu_Opcodes.h  cpu_Values.h
Libraries/RiscvLib/Include/RiscvEmu/cpu/detail/: cpu_ClkTime.h  cpu_DecoderImpl.h  cpu_IntegerMultiply.h  cpu_MemoryManager.h  cpu_MemoryMonitor.h  cpu_SharedHartContext.h
Libraries/RiscvLib/Include/RiscvEmu/diag/: diag_Abort.h  diag_Assert.h  diag_DebugLog.h  diag_FormatString.h  diag_Log.h
Libraries/RiscvLib/Include/RiscvEmu/diag/detail/: diag_AbortImpl.h  diag_AssertImpl.h  diag_DebugLogImpl.h  diag_LogImpl.h  diag_PrintSourceLocation.h
Libraries/RiscvLib/Include/RiscvEmu/hw/: hw_IDevice.h  hw_Scheduler.h
Libraries/RiscvLib/Include/RiscvEmu/intrpt/: intrpt_ISource.h  intrpt_ITarget.h  intrpt_ITargetCtlrBridge.h  intrpt_PLIC.h  intrpt_Result.h
Libraries/RiscvLib/Include/RiscvEmu/intrpt/detail/: intrpt_ITargetForCtrl.h
Libraries/RiscvLib/Include/RiscvEmu/mem/: mem_AlignedMmioDev.h  mem_IMmioDev.h  mem_MCClient.h  mem_MemoryClient.h  mem_MemoryController.h  mem_MemoryDevice.h  mem_MmioTemplateAdapter.h  mem_RegionInfo.h  mem_Result.h
Libraries/RiscvLib/Include/RiscvEmu/mem/detail/: mem_IoRegion.h  mem_MemRegion.h  mem_MemoryDeviceImpl.h  mem_RegionBase.h
Libraries/RiscvLib/Include/RiscvEmu/result/: result_ErrorBase.h  result_Result.h  result_ResultSuccess.h
Libraries/RiscvLib/Include/RiscvEmu/result/detail/: result_ResultBase.h  result_ResultValue.h
Libraries/RiscvLib/Include/RiscvEmu/test/: test_Result.h
Libraries/RiscvLib/Include/RiscvEmu/util/: util_Alignment.h  util_BitSwap.h  util_Bitfields.h  util_Bitmask.h  util_ByteCount.h  util_OverflowCheck.h  util_Range.h  util_RemovablePrioQueue.h  util_SignExtend.h
Libraries/RiscvLib/Sources/: riscv_System.cpp
Libraries/RiscvLib/Sources/cpu/: cpu_Disassembler.cpp
Libraries/RiscvLib/Sources/cpu/Hart/: cpu_CsrReadWrite.cpp  cpu_Initialize.cpp  cpu_InstructionRunner.cpp  cpu_MemoryAccess.cpp  cpu_Reset.cpp  cpu_SharedState.cpp  cpu_Trap.cpp  cpu_UserApi.cpp
Libraries/RiscvLib/Sources/cpu/detail/: cpu_ClkTime.cpp  cpu_IntegerMultiply.cpp  cpu_IntegerMultiplyImpl-arch.aarch64.S  cpu_IntegerMultiplyImpl-arch.amd64.S  cpu_MemoryManager.cpp  cpu_MemoryMonitor.cpp
Libraries/RiscvLib/Sources/diag/: diag_Abort.cpp
Libraries/RiscvLib/Sources/diag/detail/: diag_AbortImpl.cpp  diag_AssertImpl.cpp  diag_DebugLogImpl.cpp  diag_LogImpl.cpp  diag_PrintSourceLocation.cpp
Libraries/RiscvLib/Sources/hw/: hw_Scheduler.cpp
Libraries/RiscvLib/Sources/intrpt/: intrpt_ITarget.cpp  intrpt_PLIC.cpp
Libraries/RiscvLib/Sources/intrpt/detail/: intrpt_ITargetForCtrl.cpp
Libraries/RiscvLib/Sources/mem/: mem_MCClient.cpp  mem_MemoryClient.cpp  mem_MemoryController.cpp  mem_MemoryDevice.cpp
Libraries/RiscvLib/Sources/mem/detail/: mem_MemRegion.cpp  mem_MemoryDeviceImpl.cpp
Libraries/RiscvLib/Test/: CMakeLists.txt
Libraries/RiscvLib/Test/Include/RiscvEmuTest/: test_Args.h  test_Common.h  test_HartTestCase.h  test_HartTestSystem.h  test_Result.ext.h  test_TestCaseBase.h  test_TestFramework.h  test_TestResults.h
Libraries/RiscvLib/Test/Programs/CpuProfileMemoryMonitor/: CMakeLists.txt
Libraries/RiscvLib/Test/Programs/CpuTestDecodingBType/: CMakeLists.txt
Libraries/RiscvLib/Test/Programs/CpuTestDecodingIType/: CMakeLists.txt
Libraries/RiscvLib/Test/Programs/CpuTestDecodingJType/: CMakeLists.txt
Libraries/RiscvLib/Test/Programs/CpuTestDecodingRType/: CMakeLists.txt
Libraries/RiscvLib/Test/Programs/CpuTestDecodingSType/: CMakeLists.txt
Libraries/RiscvLib/Test/Programs/CpuTestDecodingUType/: CMakeLists.txt
Libraries/RiscvLib/Test/Programs/CpuTestOpcodeAUIPC/: CMakeLists.txt
Libraries/RiscvLib/Test/Programs/CpuTestOpcodeBRANCH/: CMakeLists.txt
Libraries/RiscvLib/Test/Programs/CpuTestOpcodeJAL/: CMakeLists.txt
Libraries/RiscvLib/Test/Programs/CpuTestOpcodeJALR/: CMakeLists.txt
Libraries/RiscvLib/Test/Programs/CpuTestOpcodeLOAD/: CMakeLists.txt
Libraries/RiscvLib/Test/Programs/CpuTestOpcodeLUI/: CMakeLists.txt
Libraries/RiscvLib/Test/Programs/CpuTestOpcodeOP/: CMakeLists.txt
Libraries/RiscvLib/Test/Programs/CpuTestOpcodeOP_32/: CMakeLists.txt
Libraries/RiscvLib/Test/Programs/CpuTestOpcodeOP_IMM/: CMakeLists.txt
Libraries/RiscvLib/Test/Programs/CpuTestOpcodeOP_IMM-For64/: CMakeLists.txt
Libraries/RiscvLib/Test/Programs/CpuTestOpcodeOP_IMM_32/: CMakeLists.txt
Libraries/RiscvLib/Test/Programs/CpuTestOpcodeOP_IMM_32-For64/: CMakeLists.txt
Libraries/RiscvLib/Test/Programs/CpuTestOpcodeSTORE/: CMakeLists.txt
Libraries/RiscvLib/Test/Programs/CpuTestRTypeDecoding/: CMakeLists.txt
Libraries/RiscvLib/Test/Programs/IntrptTestPLIC/: CMakeLists.txt
Libraries/RiscvLib/Test/Programs/RunTestPrograms/: CMakeLists.txt
Libraries/RiscvLib/Test/Programs/TestOpcodeLOAD/: CMakeLists.txt
Libraries/RiscvLib/Test/Programs/TestOpcodeOP_IMM/: CMakeLists.txt
Libraries/RiscvLib/Test/Sources/: test_HartTestSystem.cpp  test_Main.cpp  test_TestFramework.cpp
Libraries/RiscvLib/Test/Sources/cpu/: test_HartTestCase.cpp  test_HartTestSystem.cpp
(+44 files in other folders)
